fix loader and button size on mobile phones

--- a/scryde/src/App.scss
+++ b/scryde/src/App.scss
@@ -25,11 +25,26 @@
 }
 .button-container {
   padding: 20px;
+  @media (max-width: 700px) {
+    padding: 0;
+    display: flex;
+    width: 100%;
+    .calculate {
+      display: flex;
+      flex-direction: row;
+      height: 48px;
+      flex: 1;
+      margin-left: 15px;
+      margin-right: 15px;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
 
 .loader {
   background-color: black;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
